--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
+    "@tanstack/react-query-devtools": "^5.20.1",
     "axios": "^1.6.7",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
